commit jour 13 aprem

--- a/app/configmail.disp.ini
+++ b/app/configmail.disp.ini
@@ -8,10 +8,10 @@
 ; adresse mail, mot de passe et nom
 
 ; mettre l'adresse de son compte mail ex: exemple@gmail.com
-comptemail= 
+comptemail= benstest57@gmail.com
 
 ; mettre le mot de passe associé
-comptepassword=
+comptepassword= azerty57
 
 ; mettre le nom associé au compte
-comptename=
+comptename= Harmony Coiffure
